1. Upgraded Karate to v0.3.1 2. Using the documentRelationshipBaseUrl from karate-config.js

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,14 @@
     <dependencies>
         <dependency>
         <groupId>com.intuit.karate</groupId>
-        <artifactId>karate-junit4</artifactId>
-        <version>0.2.9</version>
+        <artifactId>karate-apache</artifactId>
+        <version>0.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.intuit.karate</groupId>
+            <artifactId>karate-junit4</artifactId>
+            <version>0.3.1</version>
         </dependency>
     </dependencies>
 
